--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
       referrerpolicy="no-referrer"
     />
 
+    <!-- sortable -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js"
+      integrity="sha512-Eezs+g9Lq4TCCq0wae01s9PuNWzHYoCMkE97e2qdkYthpI0pzC3UGB03lgEHn2XM85hDOUF6qgqqszs+iXU4UA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
     <!--normalize CSS -->
     <link rel="stylesheet" href="./styles/normalize.css" />
 
